package fyp_grading_platform.common;

public enum EvaluationType {
    SUPERVISOR_PHASE_I,
    REPORT_PHASE_I,
    ORAL_PHASE_I,
    SUPERVISOR_PHASE_II,
    REPORT_PHASE_II,
    ORAL_PHASE_II,
    DEMO_DAY_INDUSTRY
}
