package fyp_grading_platform.common;

public enum ExtensionRequestStatus {
    PENDING,
    APPROVED,
    REJECTED
}
