package fyp_grading_platform.common;

public enum PhaseStatus {
    NOT_STARTED,
    OPEN,
    CLOSED,
    ARCHIVED
}
