package fyp_grading_platform.common;

public enum PhaseType {
    PHASE_I,
    PHASE_II
}
