package fyp_grading_platform.common;

public enum ReportStatus {
    PENDING,
    GENERATED,
    SENT,
    FAILED
}
