package fyp_grading_platform.common;

public enum SubmissionStatus {
    DRAFT,
    SUBMITTED,
    LOCKED
}
