package fyp_grading_platform.common;

public enum UserRole {
    ADMIN,
    SUPERVISOR,
    REPORT_EVALUATOR,
    FACULTY_EVALUATOR,
    INDUSTRY_REPRESENTATIVE,
    COORDINATOR
}
