package fyp_grading_platform.common;

public enum UserStatus {
    ACTIVE,
    PENDING_INVITATION,
    INACTIVE,
    SUSPENDED
}
