@startuml
left to right direction
skinparam backgroundColor #F8FAFC
skinparam shadowing false
skinparam packageStyle rectangle
skinparam linetype ortho
skinparam classAttributeIconSize 0
skinparam class {
  BackgroundColor White
  BorderColor #1F2937
  ArrowColor #475569
  FontName Segoe UI
  FontSize 12
}
skinparam package {
  FontName Segoe UI
  FontStyle bold
  BorderColor #64748B
}
skinparam note {
  BackgroundColor #FFF7ED
  BorderColor #F97316
  FontName Segoe UI
}
hide circle
hide empty methods

title FYP Online Grading Platform - Diagramme global de classes metier

abstract class BaseEntity <<MappedSuperclass>> {
  - id: UUID
  - createdAt: LocalDateTime
  - updatedAt: LocalDateTime
}

package "Identity and Access" #EFF6FF {
  class User <<Entity>> {
    - universityId: String
    - fullName: String
    - email: String
    - passwordHash: String
    - phone: String
    - role: UserRole
    - status: UserStatus
  }

  class EvaluatorProfile <<Entity>> {
    - department: String
    - specialization: String
    - externalOrganization: String
    - external: boolean
  }

  class StudentProfile <<Academic Record>> {
    - firstName: String
    - lastName: String
    - studentNumber: String
    - academicYear: String
    - trackCode: String
    - level: String
  }
}

package "Projects, Teams and Assignments" #F0F9FF {
  class Track <<Entity>> {
    - code: String {unique}
    - name: String
    - description: String
    - active: boolean
  }

  class Project <<Entity>> {
    - title: String
    - abstractText: String
    - academicYear: String
    - status: String
  }

  class Team <<Entity>> {
    - name: String
    - section: String
    - academicYear: String
  }

  class ProjectSupervisorAssignment <<Association Entity>> {
    - active: boolean
  }

  class ProjectEvaluatorAssignment <<Association Entity>> {
    - evaluationType: EvaluationType
    - active: boolean
  }
}

package "Phase Calendar" #FFFBEB {
  class Phase <<Entity>> {
    - type: PhaseType
    - name: String
    - academicYear: String
    - startDate: LocalDateTime
    - deadline: LocalDateTime
    - status: PhaseStatus
  }

  class PhaseExtensionRequest <<Entity>> {
    - reason: String
    - requestedDeadline: LocalDateTime
    - status: ExtensionRequestStatus
    - requestedAt: LocalDateTime
    - reviewedAt: LocalDateTime
    - extendedDeadline: LocalDateTime
    - adminComment: String
  }
}

package "Evaluation Model" #F0FDF4 {
  class EvaluationFormTemplate <<Entity>> {
    - name: String
    - evaluationType: EvaluationType
    - phaseType: PhaseType
    - description: String
    - totalWeight: double
    - active: boolean
  }

  class RubricCriterion <<Entity>> {
    - title: String
    - description: String
    - maxScore: double
    - weight: double
    - displayOrder: int
    - required: boolean
  }

  class EvaluationSubmission <<Entity>> {
    - evaluationType: EvaluationType
    - status: SubmissionStatus
    - locked: boolean
    - draftSavedAt: LocalDateTime
    - submittedAt: LocalDateTime
    - lockedAt: LocalDateTime
    - totalScore: double
    - requiredScoreCount: Integer
    - completedScoreCount: Integer
    - generalComment: String
  }

  class CriterionScore <<Entity>> {
    - score: double
    - comment: String
  }
}

package "Grades, Reports and Traceability" #F5F3FF {
  class GradeRule <<Entity>> {
    - phaseType: PhaseType
    - evaluationType: EvaluationType
    - weight: double
    - active: boolean
  }

  class Grade <<Entity>> {
    - phaseType: PhaseType
    - rawScore: double
    - weightedScore: double
    - finalScore: double
    - published: boolean
  }

  class Report <<Entity>> {
    - filePath: String
    - status: ReportStatus
    - generatedAt: LocalDateTime
    - sentAt: LocalDateTime
    - recipientEmail: String
    - contentSnapshot: String
  }

  class EmailNotification <<Entity>> {
    - recipient: String
    - recipientUserId: UUID
    - subject: String
    - status: String
    - category: String
    - severity: String
    - deduplicationKey: String
    - actionView: String
    - readAt: LocalDateTime
  }

  class AuditLog <<Entity>> {
    - userId: UUID
    - action: String
    - entityType: String
    - entityId: UUID
    - oldValue: String
    - newValue: String
    - ipAddress: String
    - userAgent: String
  }
}

package "Business Enumerations" #F8FAFC {
  enum UserRole {
    ADMIN
    SUPERVISOR
    REPORT_EVALUATOR
    FACULTY_EVALUATOR
    INDUSTRY_REPRESENTATIVE
    COORDINATOR
  }
  enum UserStatus {
    ACTIVE
    INACTIVE
    SUSPENDED
  }
  enum PhaseType {
    PHASE_I
    PHASE_II
  }
  enum PhaseStatus {
    NOT_STARTED
    OPEN
    CLOSED
    ARCHIVED
  }
  enum EvaluationType {
    SUPERVISOR_PHASE_I
    REPORT_PHASE_I
    ORAL_PHASE_I
    SUPERVISOR_PHASE_II
    REPORT_PHASE_II
    ORAL_PHASE_II
    DEMO_DAY_INDUSTRY
  }
  enum SubmissionStatus {
    DRAFT
    SUBMITTED
    LOCKED
  }
  enum ExtensionRequestStatus {
    PENDING
    APPROVED
    REJECTED
  }
  enum ReportStatus {
    PENDING
    GENERATED
    SENT
    FAILED
  }
}


note bottom of BaseEntity
  Every persistent entity extends BaseEntity.
  The inheritance is documented once to keep
  the global diagram readable.
end note

User "1" -- "0..1" EvaluatorProfile : account profile
User ..> UserRole
User ..> UserStatus

Track "1" -- "0..*" Project : classifies
Project "1" -- "0..1" Team : assigned team
Team "0..*" o-- "0..*" StudentProfile : academic members
Project "1" *-- "0..*" ProjectSupervisorAssignment
Project "1" *-- "0..*" ProjectEvaluatorAssignment
EvaluatorProfile "1" -- "0..*" ProjectSupervisorAssignment : supervisor
EvaluatorProfile "1" -- "0..*" ProjectEvaluatorAssignment : evaluator
ProjectEvaluatorAssignment ..> EvaluationType

Phase "1" *-- "0..*" PhaseExtensionRequest
User "1" -- "0..*" PhaseExtensionRequest : requester
User "0..1" -- "0..*" PhaseExtensionRequest : reviewer
Phase ..> PhaseType
Phase ..> PhaseStatus
PhaseExtensionRequest ..> ExtensionRequestStatus

EvaluationFormTemplate "1" *-- "1..*" RubricCriterion : criteria
Project "1" -- "0..*" EvaluationSubmission
Phase "1" -- "0..*" EvaluationSubmission
EvaluationFormTemplate "1" -- "0..*" EvaluationSubmission
EvaluatorProfile "1" -- "0..*" EvaluationSubmission : submitted by
EvaluationSubmission "1" *-- "0..*" CriterionScore : scores
RubricCriterion "1" -- "0..*" CriterionScore : scored criterion
ProjectEvaluatorAssignment ..> EvaluationSubmission : authorizes
EvaluationFormTemplate ..> EvaluationType
EvaluationFormTemplate ..> PhaseType
EvaluationSubmission ..> EvaluationType
EvaluationSubmission ..> SubmissionStatus

Project "1" -- "0..*" Grade
Phase "1" -- "0..*" Grade
Project "1" -- "0..*" Report
Phase "0..1" -- "0..*" Report
GradeRule ..> Grade : calculation rule
GradeRule ..> EvaluationType
GradeRule ..> PhaseType
Grade ..> PhaseType
Report ..> ReportStatus

User .. EmailNotification : recipientUserId
User .. AuditLog : userId
@enduml
